# Repository-oursework

./: .env.example  README.md  main.py  pyproject.toml  result_reports
src/: decorators.py  read_operations.py  reports.py  result_reports  services.py  utils.py  views.py
tests/: conftest.py  result_reports  test_decorators.py  test_operations.xlsx  test_read_operations.py  test_reports.py  test_services.py  test_utils.py
