[tool.poetry]
name = "pythonprojectсoursework"
version = "0.1.0"
description = ""
authors = ["Матвей Новиков <originsik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.0"
pytest = "^8.2.2"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = "(.git)"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
